<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">yiepa!</string>
    <!-- string name="titleColors">Todo<b><font color="#FF7A0D">2</font></b>Day</string -->
    <string name="titleColors">yiepa!<b><font color="#FF7A0D"></font></b></string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="eventos">Eventos</string>
    <string name="categorias">Categorías</string>
    <string name="ajustes">Configuración</string>
    <string name="categorias_titulo1">Elige tus categorías favoritas</string>
    <string name="categorias_texto">Activa las categorías que más te gusten y visualiza únicamente los eventos que realmente te interesan.</string>

    <string-array name="categorias">
        <item>Antros y Bares</item>
        <item>Cine y Teatro</item>
        <item>Cultura</item>
        <item>Deportes</item>
        <item>Negocios</item>
        <item>Con niños</item>
        <item>Gastronomía</item>
        <item>Música</item>
        <item>Salud</item>
        <item>Sociales</item>
        <item>Tecnología</item>
        <item>Verde</item>
        <item>Otros</item>
    </string-array>
    
    <string-array name="clavesCategoria">
        <item>a</item>
        <item>b</item>
        <item>c</item>
        <item>d</item>
        <item>e</item>
        <item>f</item>
        <item>g</item>
        <item>h</item>
        <item>i</item>
        <item>j</item>
        <item>k</item>
        <item>l</item>
        <item>m</item>
    </string-array>

    <string name="antrosYBares">Antros y Bares</string>
    <string name="cineYTeatro">Cine y Teatro</string>
    <string name="cultura">Cultura</string>
    <string name="deportes">Deportes</string>
    <string name="emprendedoresYNegocios">Emprendedores y Negocios</string>
    <string name="eventosInfantiles">Con niños</string>
    <string name="gastronomia">Gastronomía</string>
    <string name="musica">Música</string>
    <string name="salud">Salud</string>
    <string name="sociales">Sociales</string>
    <string name="tecnologia">Tecnología</string>
    <string name="verdeYResponsabilidadSocial">Verde</string>
    <string name="Otros">Otros</string>
    <string name="tituloSettings">Configuración</string>
    <string name="descripcionSettings">Disfruta de los mejores eventos personalizando tu experiencia.</string>
    <string name="distancia">Distancia</string>
    <string name="que_distancia">¿Distancia de qué?</string>
    <string name="kmDistancia">5 km</string>
    <string name="tiempo">Tiempo</string>
    <string name="que_tiempo">¿Tiempo de qué?</string>
    <string name="hrsTiempo">1 hrs</string>
    <string name="defaultUser">\&#64;Usuario</string>
    <string name="donde_ubicacion">¿De dónde?</string>
    <string name="sesion">Regístrate</string>
    <string name="que_sesion">¿Para qué?</string>
    <string name="titSesion"></string>
    <string name="textSesion">Iniciar sesión con Twitter</string>
    <string name="textCerrarSesion">Cerrar sesión</string>
    <string name="bienvenido">Bienvenid@ </string>
    <string name="titUbicacion">Ubicación</string>
    <string name="miUbicacion">Automática</string>
    <string name="laUbicacion">Ubícate!</string>
    <string name="checkInternet">Revisa que este encendida tu conexión Wifi / 3G</string>
    <string name="checkInternetAvatar">Revisa que este encendida tu conexión Wifi/3G para descargar tu avatar de Twitter</string>
    <string name="ok">Ok</string>
    <string name="defaultEventTitle">Tumblr PBR skateboard Truffaut, craft beer church-key messenger bag ennui bicycle rights lo-fi jean shorts plaid.</string>
    <string name="defaultDescripcionEvento">Lorem ipsum ad his scripta blandit partiendo, eum fastidii accumsan euripidis in, eum liber hendrerit an. Qui ut wisi vocibus suscipiantur, quo dicit ridens inciderint id. Quo mundi lobortis reformidans eu, legimus senserit definiebas an eos.</string>
    <string name="tituloFuente">Fuente:</string>
    <string name="defaultFuente">www.google.com.mx</string>
    <string name="defaultCategoria">Categoría</string>
    <string name="defaultFecha"> Dia XX de AlgunMes | 23:59</string>
    <string name="defaultHrs">hrs.</string>
    <string name="defaultLugar">Teatro Cultural Poliforum</string>
    <string name="defaultCounter">0</string>
    <string name="defaultDistancia">A 3.5 km</string>
    <string name="defaultTelefono">55-55-55-55</string>
    <string name="defaultBoleto">Boletos:</string>
    <string name="defaultPrecio">100</string>
    <string name="signoPesos">$</string>
    <string name="defaultTipoBoleto">Entrada General</string>
    <string name="leyendaVariosPrecios">Los precios van desde </string>
    <string name="hastaVarios">hasta </string>
    <string name="etiquetaCantidadBoletos">Cantidad de Boletos:</string>
    <string name="defaultCantidadBoletos">20</string>
    <string name="gratis">Gratis, Entrada Libre.</string>
    <string name="general">Entrada General </string>
    <string name="no_disponible">No disponible </string>
    <string name="defaultOrganizador">Organizado por:</string>
    <string name="nombreOrganizador">Sferea Studios</string>
    <string name="defaultDireccion">Paseo de la Reforma 325, Lomas Virreyes, Miguel Hidalgo, D.F.</string>
    <string name="cadenaTweet_inicio">Checa el evento</string>
    <string name="cadenaTweet_en">en</string>
    <string name="tweetMuyLargo">Tweet muy Largo!</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="NoInternetToastMessage">Verificar la conexión a internet.</string>
    <string name="errorUbicacion">No se puede obtener la ubicación.</string>
    <string name="gpsDesactivado">El servicio de localización está desactivado, ¿ir a configuración del dispositivo?</string>
    <string name="conexionRedDesactivada">La conexión de red está desactivada, ¿ir a configuración del dispositivo?</string>
    <string name="btnTextAceptar">Aceptar</string>
    <string name="btnTextCancelar">Cancelar</string>
    <string name="errorVerificarConexion">Verificar la conexión a internet.</string>
    <string name="errorTelefonoNoDisponible">Número teléfonico no disponible.</string>
    <string name="progressDialogBusqueda">Procesando nueva búsqueda.</string>

</resources>