<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:paddingLeft="10dp"
    android:paddingRight="5dp"
    android:background="#FFF" >
    
    <ImageView 
        android:id="@+id/thumbnailFavorite"
        android:layout_width="132dp"
        android:layout_height="96dp"
        android:layout_marginRight="12dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:scaleType="centerCrop"
        android:src="@drawable/evento"/>
    
    <ImageView
        android:id="@+id/estadoEventoAbierto"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:padding="3dp"
        android:layout_alignRight="@+id/thumbnailFavorite"
        android:layout_marginTop="5dp"
        android:layout_alignTop="@+id/thumbnailFavorite"
        android:background="@drawable/circle_green_white"
        android:src="@drawable/ic_action_accept" 
        android:visibility="gone"/>
    
    <ImageView
        android:id="@+id/estadoEventoEditado"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:padding="4dp"
        android:layout_marginTop="5dp"
        android:layout_alignRight="@+id/thumbnailFavorite"
        android:layout_alignTop="@+id/thumbnailFavorite"
        android:background="@drawable/circle_blue_white"
        android:src="@drawable/ic_action_edit" 
        android:visibility="gone"/>
    
    <ImageView
        android:id="@+id/estadoEventoCancelado"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:padding="3dp"
        android:layout_marginTop="5dp"
        android:layout_alignRight="@+id/thumbnailFavorite"
        android:layout_alignTop="@+id/thumbnailFavorite"
        android:background="@drawable/circle_green_white"
        android:src="@drawable/ic_action_accept" 
        android:visibility="visible"/>
    
    <TextView 
        android:id="@+id/nombreFavorito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/thumbnailFavorite"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignParentTop="true"
        android:text="@string/defaultEventTitle"/>
    
    <RelativeLayout 
        android:id="@+id/layoutCategoriaFavorito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/thumbnailFavorite"
        android:layout_below="@id/nombreFavorito"
        android:layout_alignLeft="@id/nombreFavorito">
        
        <ImageView 
  			android:id="@+id/iconCategoriaFavorito"
          	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
          	android:adjustViewBounds="true"
          	android:maxWidth="18dp"
          	android:layout_marginRight="3dp"
          	android:layout_centerVertical="true"
          	android:src="@drawable/ic_small_musica"/>
        
        <TextView 
	        android:id="@+id/categoriaFavorito"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/iconCategoriaFavorito"
	        android:textStyle="bold"
	        android:textColor="#888"
	        android:textAppearance="?android:attr/textAppearanceSmall"
	        android:text="@string/defaultCategoria"/>
        
    </RelativeLayout>
    
    <View 
        android:id="@+id/separadorEvento"
        android:layout_width="10dp"
        android:layout_toRightOf="@id/thumbnailFavorite"
        android:layout_below="@id/layoutCategoriaFavorito"
        android:layout_height="5dp"/>
    
    <TextView 
        android:id="@+id/fechaFavorito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/layoutCategoriaFavorito"
        android:layout_toRightOf="@id/layoutCategoriaFavorito"
        android:layout_alignParentRight="true"
        android:gravity="right"
        android:layout_marginRight="10dp"
        android:textColor="#888"
        android:layout_below="@id/separadorEvento"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/defaultFecha"/>
    
    <TextView 
        android:id="@+id/lugarFavorito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/thumbnailFavorite"
        android:layout_below="@id/layoutCategoriaFavorito"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/defaultLugar"/>
    
    <View 
        android:id="@+id/separadorEventoDos"
        android:layout_width="5dp"
        android:layout_toRightOf="@id/thumbnailFavorite"
        android:layout_below="@id/lugarFavorito"
        android:layout_height="5dp"/>
    
    <TextView 
        android:id="@+id/distanciaFavorito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/thumbnailFavorite"
        android:layout_below="@id/separadorEventoDos"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/defaultDistancia"/>
    
    <LinearLayout 
        android:id="@+id/layoutShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/distanciaFavorito"
        android:layout_alignParentRight="true"
        android:orientation="horizontal"
        android:gravity="center">
            
        <RelativeLayout
            android:id="@+id/botonRetweetEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            
            <ImageView 
                android:id="@+id/iconRetweetFavorito"
	          	android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	          	android:adjustViewBounds="true"
	          	android:maxWidth="18dp"
	          	android:layout_centerVertical="true"
	          	android:src="@drawable/ic_action_refresh"/>
            
            <TextView
                android:id="@+id/textRetweetCounter" 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#AAA"
                android:text="@string/defaultCounter"
                android:layout_toRightOf="@id/iconRetweetFavorito"
                android:layout_centerVertical="true"
                android:paddingLeft="5dp"
                />
            
        </RelativeLayout>
	      
	      <View android:layout_width="15dp" android:layout_height="1dp"/>
	      
	      <RelativeLayout
            android:id="@+id/botonFavEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            
            <ImageView 
                android:id="@+id/iconFavFavorito"
	          	android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	          	android:adjustViewBounds="true"
	          	android:maxWidth="18dp"
	          	android:layout_centerVertical="true"
	          	android:src="@drawable/ic_action_important_active"/>
            
            <TextView
                android:id="@+id/textFavCounter" 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#AAA"
                android:text="@string/defaultCounter"
                android:layout_toRightOf="@id/iconFavFavorito"
                android:layout_centerVertical="true"
                android:paddingLeft="5dp"
                />
            
        </RelativeLayout>
	      
	      <View android:layout_width="10dp" android:layout_height="1dp"/>
            
   	</LinearLayout>
   
    <TextView 
        android:id="@+id/descripcionFavorito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/thumbnailFavorite"
        android:layout_below="@id/nombreFavorito"
        android:textColor="#868686"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/defaultDescripcionEvento"
        android:visibility="gone"/>

</RelativeLayout>
